--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.8.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.9.0"
   },
